# myLastFmPlayer

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  agents.md  codereview20260615.md  localPipeline.sh  pyproject.toml  readme.md  setup.py
.github/workflows/: local-pipeline.yml  manual-release.yml
docs/: agents.md  api.rst  architecture.rst  conf.py  index.rst
documents/: 00_REQUIREMENTS.md  02_DEVELOPMENT_PLAN.md  03_ARCHITECTURE.md  04_REVIEW.md  05_IMPROVEMENTS.md  06_SCROBBLING_TODO.md  07_AGENT_GUIDELINES.md  08_WORKLOAD.md  09_GITHUB_ACTIONS.md  10_BUG_DOWNLOADER.md  11_MVC_FLOW_REVIEW.md  12_codereview20260615.md  14_buglist20260623.md  IMPROVEMENTS.md  REQUIREMENTS.md  codereview20260617.md  linkedin_post.md
media/: audio_and_movie_joiner.sh
my_lastfm_player/: __init__.py  __main__.py  app_credentials.py  background_tasks.py  controller.py  dependencies.py  download.py  i18n.py  lastfm.py  logging_config.py  main.py  models.py  playback.py  scrobbling.py  settings.py  storage.py  themes.py  version.py  workers.py  youtube.py
my_lastfm_player/translations/: my_lastfm_player_de.qm  my_lastfm_player_de.ts  my_lastfm_player_hr.qm  my_lastfm_player_hr.ts  my_lastfm_player_uk.qm  my_lastfm_player_uk.ts  my_lastfm_player_zh.qm  my_lastfm_player_zh.ts
my_lastfm_player/ui/: __init__.py  flags.py  icons.py  main_window.py  preferences_dialog.py  track_table_model.py
tests/: conftest.py  test_app_credentials.py  test_app_smoke.py  test_background_tasks.py  test_controller.py  test_dependencies.py  test_download.py  test_flags.py  test_i18n.py  test_icons.py  test_lastfm.py  test_lastfm_e2e.py  test_logging_config.py  test_models.py  test_playback.py  test_preferences_dialog.py  test_release_artifacts.py  test_scrobbling.py  test_settings.py  test_storage.py  test_themes.py  test_track_table_model.py  test_workers.py  test_youtube.py
tests/fixtures/: lastfm_loved_page_1.html  lastfm_loved_page_2.html
tools/: build_release_artifacts.py  check_docs.py  compile_translations.sh  update_translations.sh
