[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "my-lastfm-player"
description = "Linux desktop app for fetching Last.fm loved tracks and preparing local playback."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    { name = "Marcel Petrick", email = "mail@marcelpetrick.it" }
]
dynamic = ["version"]
dependencies = [
    "beautifulsoup4>=4.12",
    "PyQt6>=6.7",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "sphinx>=8.0",
]

[project.scripts]
my-lastfm-player = "my_lastfm_player.main:main"

[tool.setuptools.packages.find]
include = ["my_lastfm_player*"]

[tool.setuptools.package-data]
my_lastfm_player = ["translations/*.qm", "translations/*.ts"]

[tool.setuptools.dynamic]
version = { attr = "my_lastfm_player.version.__version__" }

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=my_lastfm_player",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["my_lastfm_player"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
