[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "my-lastfm-player"
description = "Linux desktop app for fetching Last.fm loved tracks and preparing local playback."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
authors = [
    { name = "Marcel Petrick", email = "mail@marcelpetrick.it" }
]
dynamic = ["version"]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pylast>=7.0.2",
    "PyQt6>=6.11.0",
    "requests>=2.34.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.5.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pylint>=4.0.5",
    "ruff>=0.15.12",
    "sphinx>=9.1.0",
]

[project.scripts]
my-lastfm-player = "my_lastfm_player.main:main"

[tool.setuptools.packages.find]
include = ["my_lastfm_player*"]

[tool.setuptools.package-data]
my_lastfm_player = ["translations/*.qm", "translations/*.ts"]

[tool.setuptools.dynamic]
version = { attr = "my_lastfm_player.version.__version__" }

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=my_lastfm_player",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["my_lastfm_player"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pylint.main]
py-version = "3.12"
jobs = 0
recursive = true

[tool.pylint.messages_control]
disable = [
    "attribute-defined-outside-init",
    "broad-exception-caught",
    "duplicate-code",
    "fixme",
    "import-outside-toplevel",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-name-in-module",
    "protected-access",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "unnecessary-ellipsis",
]

[tool.pylint.format]
max-line-length = 100
